--- a/files/default/unixodbc.snowflake.ini
+++ b/files/default/unixodbc.snowflake.ini
@@ -9,6 +9,7 @@ ErrorMessagesPath=/etc/snowflake_odbc/ErrorMessages/
 LogLevel=0
 #LogNamespace=
 LogPath=/tmp/
+UseNSSDB=true
 
 ## - Uncomment the ODBCInstLib corresponding to the Driver Manager being used.
 ## - Note that the path to your ODBC Driver Manager must be specified in LD_LIBRARY_PATH (LIBPATH for AIX, DYLD_LIBRARY_PATH for Darwin).
