--- a/files/default/simba.snowflake.ini
+++ b/files/default/simba.snowflake.ini
@@ -5,33 +5,32 @@
 ## Execute 'odbc_config --cflags' to determine if you need UTF-32 or UTF-16 on unixODBC
 DriverManagerEncoding=UTF-16
 DriverLocale=en-US
-ErrorMessagesPath=/etc/snowflake_odbc/ErrorMessages/
-LogLevel=0
-#LogNamespace=
-LogPath=/tmp/
-UseNSSDB=true
+ErrorMessagesPath=/usr/bin/snowflake_odbc/ErrorMessages/
+LogLevel=1 # up to 6 if you want most verbose logging
+LogNamespace=
+LogPath=/var/log/snowflake_odbc
 
 ## - Uncomment the ODBCInstLib corresponding to the Driver Manager being used.
 ## - Note that the path to your ODBC Driver Manager must be specified in LD_LIBRARY_PATH (LIBPATH for AIX, DYLD_LIBRARY_PATH for Darwin).
 ## - Note that AIX has a different format for specifying its shared libraries.
 
 # Generic ODBCInstLib
-#   iODBC
+# iODBC
 #ODBCInstLib=libiodbcinst.so.2
 
-#   SimbaDM / unixODBC
+# SimbaDM / unixODBC
 #ODBCInstLib=libodbcinst.so
 
 # Darwin specific ODBCInstLib
-#   iODBC
+# iODBC
 #ODBCInstLib=libiodbcinst.dylib
 
 # AIX specific ODBCInstLib
-#   iODBC
+# iODBC
 #ODBCInstLib=libiodbcinst.a(libiodbcinst.so.2)
 
-#   SimbaDM
+# SimbaDM
 #ODBCInstLib=libodbcinst.a(odbcinst.so)
 
-#   unixODBC
+# unixODBC
 ODBCInstLib=/usr/lib64/libodbcinst.so
