snflk - add temp logging

--- a/files/default/simba.snowflake.ini
+++ b/files/default/simba.snowflake.ini
@@ -5,5 +5,6 @@ ErrorMessagesPath=/usr/bin/snowflake_odbc/ErrorMessages/
 LogNamespace=
 LogPath=/tmp
 ODBCInstLib=/usr/lib64/libodbcinst.so
-#LogLevel=6
+LogLevel=6
+CURLVerboseMode=true
 CABundleFile=/usr/bin/snowflake_odbc/lib/cacert.pem
