update snowflake drivers to 2.16.3

--- a/files/default/simba.snowflake.ini
+++ b/files/default/simba.snowflake.ini
@@ -4,5 +4,5 @@ DriverLocale=en-US
 ErrorMessagesPath=/usr/bin/snowflake_odbc/ErrorMessages/
 LogNamespace=
 LogPath=/tmp
-ODBCInstLib=/usr/lib64/libodbcinst.so
+ODBCInstLib=libodbcinst.so
 CABundleFile=/usr/bin/snowflake_odbc/lib/cacert.pem
